--- a/package.json
+++ b/package.json
@@ -5,11 +5,21 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "cypress open"
   },
   "dependencies": {
+    "dotenv": "^9.0.2",
     "next": "10.2.0",
+    "pg": "^8.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "cypress": "^7.3.0",
+    "eslint": "^7.26.0",
+    "eslint-config-react-minimal": "^2.0.0",
+    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-react": "^7.23.2"
   }
 }
